# Crittable

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: backend.instructions.md  frontend.instructions.md  llm-prompts.instructions.md
.github/workflows/: ci.yml  docker.yml  live-tests.yml  security.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  logging_setup.py  main.py  rate_limit.py  security_headers.py
backend/app/api/: __init__.py  errors.py  routes.py
backend/app/auth/: __init__.py  audit.py  authn.py  authz.py
backend/app/devtools/: __init__.py  api.py  recorder.py  runner.py  scenario.py
backend/app/extensions/: __init__.py  dispatch.py  models.py  registry.py
backend/app/extensions/loaders/: __init__.py  env.py
backend/app/llm/: __init__.py  _shared.py  client.py  cost.py  dispatch.py  errors.py  export.py  guardrail.py  prompts.py  protocol.py  tools.py
backend/app/llm/clients/: __init__.py  litellm_client.py
backend/app/sessions/: __init__.py  active_roles.py  exports.py  gc.py  manager.py  models.py  notepad.py  phase_policy.py  progress.py  repository.py  slots.py  submission_pipeline.py  turn_driver.py  turn_engine.py  turn_validator.py
backend/app/templates/: notepad.py
backend/app/templates/notepad/: data_breach.md  generic_ir.md  ransomware.md
backend/app/ws/: __init__.py  connection_manager.py  routes.py
backend/scenarios/: README.md  discussion_then_ready.json  full_5role_phishing.json  smoke_2role.json  turn_limit_stop_2role.json  workstreams_5role_polish.json
backend/scripts/: README.md  diagnostic_full_response.py  issue_151_before_after.py  live_recovery_check.py  run-live-tests.sh
backend/tests/: conftest.py  mock_anthropic.py  mock_chat_client.py  test_aar_export.py  test_active_roles_narrowing.py  test_ai_pause_toggle.py  test_api_routes_gaps.py  test_app_boot_gate.py  test_auth.py  test_chat_declutter_phase_a.py  test_chat_declutter_phase_b.py  test_chat_declutter_polish.py  test_composer_mentions_routing.py  test_config.py  test_connection_manager_broadcast_creator.py  test_connection_manager_disconnect.py  test_connection_manager_focus.py  test_dispatch_tools.py  test_e2e_session.py  test_export_json.py  test_extensions.py  test_guardrail.py  test_health.py  test_http_edge_hardening.py  test_intent_ready_quorum.py  test_invite_code.py  test_invitee_roles_setup.py  test_kick_regression.py  test_litellm_translators.py  test_live_cost_cap.py  test_live_fixtures.py  test_llm_backend_seam.py  test_llm_client.py  test_llm_concurrency_governor.py  test_logging_setup.py  test_logging_setup_test_mode.py  test_message_hidden_from_ai.py  test_mock_chat_client.py  test_notepad.py  test_notepad_api.py  (+28 more)
backend/tests/live/: conftest.py  cost_cap.py  judge.py  test_aar_generation.py  test_aar_quality_judge.py  test_consistency.py  test_edge_fixtures.py  test_guardrail_injection_fuzz.py  test_inject_chain_recovery.py  test_long_context_routing.py  test_prompt_regression_judge.py  test_setup_question_floor.py  test_tool_routing.py  test_workstreams_setup_routing.py
backend/tests/scenarios/: .gitignore  conftest.py  test_scenario_api.py  test_scenario_runner.py  test_scenario_runner_edges.py  test_turn_limit_scenario.py
design/handoff/: BRAND.md  Brand Package.readable.html  Brand Package.standalone-print.html  Brand Package.standalone.html  HANDOFF.md  README.md
design/handoff/source/: Brand Package.html  SOURCE.md  app-screens.jsx  artboards.jsx  mark.jsx  tokens.css
docker/: Dockerfile
docs/: PLAN.md  architecture.md  configuration.md  extensions.md  llm_providers.md  prompt-writing-rules.md  prompts.md  testing-llm.md  tool-design.md  turn-lifecycle.md
docs/mockups/chat-declutter/: a-filter-rails.html  b-threads.html  c-lanes.html  d-tags.html  data.js  e-hybrid.html  index.html  shared.js  styles.css
docs/plans/: chat-decluttering.md
docs/ux-tests/: discussion-mode-protocol.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/public/favicon/: HEAD-SNIPPET.html  site.webmanifest
frontend/src/: App.tsx  index.css  main.tsx  test-setup.ts  vite-env.d.ts
frontend/src/__tests__/: AarReport.test.tsx  ActionItemsRail.test.tsx  App.test.tsx  BackendStatusChip.test.tsx  CollapsibleRailPanel.test.tsx  Composer.mentions.test.tsx  Composer.nothingToAdd.test.tsx  Composer.typing.test.tsx  Facilitator.atCapacity.test.tsx  Facilitator.intro.test.tsx  Facilitator.inviteGate.test.tsx  Facilitator.looksReady.test.tsx  HighlightActionPopover.test.tsx  InviteGate.test.tsx  JoinIntro.waiting.test.tsx  MarkReadyButton.test.tsx  MentionPopover.test.tsx  Play.e2e.test.tsx  Play.turnLimit.test.tsx  RightSidebar.tabs.test.tsx  RoleRoster.test.tsx  RolesPanel.test.tsx  SetupChat.scroll.test.tsx  SetupLobbyView.cta.test.tsx  SetupReviewView.test.tsx  SetupView.budgetExhausted.test.tsx  SetupView.planPanel.test.tsx  SetupWizard.test.tsx  Timeline.test.tsx  Transcript.contextmenu.test.tsx  Transcript.test.tsx  Transcript.typing.test.tsx  Transcript.workstream.test.tsx  (+22 more)
(+69 files in other folders)
