[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crittable-backend"
version = "0.0.1"
description = "Backend for Crittable — tabletop exercises for security teams."
requires-python = ">=3.12"
license = { text = "FSL-1.1-ALv2" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "structlog>=24.1",
    "itsdangerous>=2.2",
    "httpx>=0.27",
    "jinja2>=3.1",
    # Yjs CRDT bindings (issue #98 shared notepad). The server runs
    # pycrdt as an opaque relay (path C: apply binary updates from
    # clients, encode state for reconnects). Markdown extraction
    # happens client-side. MIT-licensed, actively maintained — same
    # library Jupyter's Real-Time Collaboration extension uses.
    "pycrdt>=0.10",
    # Provider router — routes LLM calls to ~100 providers (Azure OpenAI,
    # AWS Bedrock, Vertex AI, OpenRouter, OpenAI-direct, internal LLM
    # gateways, etc). The single LLM transport in production. See
    # `docs/llm_providers.md` and issue #193.
    #
    # Dep-intake (per CLAUDE.md): MIT-licensed, actively maintained
    # (BerriAI/litellm — daily commits as of 2026-05). Provider SDKs load
    # lazily; the import-time footprint is small. Pinned to >=1.83 so
    # Anthropic prompt-caching round-trips cleanly (validated in PoC,
    # see issue #193 Phase 0).
    "litellm>=1.83",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
    # Anthropic SDK — used only by the live-test ``anthropic_client`` /
    # ``judge_client`` fixtures in ``backend/tests/live/`` for direct
    # API calls (cost-tracked via ``_wrap_messages_create``). Production
    # routing goes through LiteLLM; the SDK is not imported outside
    # the live-test fixture path.
    "anthropic>=0.40",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: hits the real Anthropic API; cost ~$0.01/test; auto-skipped unless LLM_API_KEY is set",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
